Create hero section's css rules

--- a/style.css
+++ b/style.css
@@ -47,6 +47,18 @@ h2 {
   font-family: 'Poppins';
   font-weight: 600;
 }
+
+.btn {
+  display: inline-block;
+  background-color: #FF52C1;
+  color: #fff;
+  font-weight: 700;
+  transition-duration: 0.4s;
+}
+
+.btn:hover {
+  background-color: #FF9ADB;
+}
 /**************************/
 /* END GENERAL RULES */
 /**************************/
@@ -69,3 +81,153 @@ h2 {
 /**************************/
 /* END GENERAL REUSABLE COMPONENTS */
 /**************************/
+
+/*************************/
+/* START HOME */
+/*************************/
+.home {
+  background-color: hsl(193, 100%, 96%);
+  background-image: url(/images/bg-hero-desktop.svg);
+  background-size: cover;
+  min-height: 100vh;
+  padding: 4.8rem 2rem 0 2rem;
+}
+
+@media (max-width: 41em) {
+  .home {
+    background-image: url(/images/bg-hero-mobile.svg);
+    padding: 2.87rem 2rem 4.62rem;
+  }
+}
+
+/* START HEADER */
+.header {
+  max-width: 128rem;
+  margin: 0 auto;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header .logo {
+  max-width: 20rem;
+}
+
+@media (max-width: 41em) {
+  .header .logo {
+    max-width: 13rem;
+  }
+}
+
+.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.4rem;
+  font-weight: 700;
+  background-color: #fff;
+  color: var(--main-color);
+  padding: 1.5rem 6.4rem;
+  box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.0954201);
+  border-radius: 24px;
+  transition-duration: 0.4s;
+}
+
+.nav-link:hover {
+  color: #808E9A;
+}
+
+@media (max-width: 41em) {
+  .nav-link {
+    font-size: 1.25rem;
+    padding: 5px 23px;
+  }
+}
+/* END HEADER */
+
+/* START HERO SECTION */
+.hero-section {
+  max-width: 127rem;
+  min-height: calc(100vh - 11.7rem);
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+
+.hero {
+  grid-template-columns: 0.79fr 1fr;
+  column-gap: 5.4rem;
+  margin: 0 auto;
+}
+
+@media (max-width: 62em) {
+  .hero {
+    grid-template-columns: 1fr;
+    row-gap: 5.4rem;
+    text-align: center;
+  }
+}
+
+.heading-primary {
+  font-family: 'Poppins', sans-serif;
+  font-size: 4rem;
+  font-weight: 600;
+  color: var(--main-color);
+}
+
+@media (max-width: 41em) {
+  .heading-primary {
+    font-size: 3rem;
+    line-height: 1.5;
+  }
+}
+
+.hero-description {
+  color: hsla(192, 100%, 9%, 1);
+  font-size: 1.8rem;
+  line-height: 1.7;
+  margin: 3.2rem 0;
+}
+
+@media (max-width: 62em) {
+  .hero-description {
+    max-width: 88.6%;
+    margin: 3rem auto 4rem;
+    font-size: 2rem;
+    line-height: 1.5;
+  }
+}
+
+.hero .btn {
+  font-size: 1.4rem;
+  padding: 1.85rem 6.95rem;
+  box-shadow: 2px 3px 6px 1px rgba(255, 82, 193, 0.166185);
+  border-radius: 28px;
+}
+
+@media (max-width: 41em) {
+  .hero .btn {
+    font-size: 1.5rem;
+    padding: 1.5rem 7.48rem;
+  }
+}
+
+@media (max-width: 62em) {
+  .hero-img {
+    max-width: 60%;
+  }
+}
+
+@media (max-width: 41em) {
+  .hero-img {
+    max-width: 100%;
+    padding: 0 4px;
+  }
+}
+/* END HERO SECTION */
+/*************************/
+/* END HOME */
+/*************************/
